# emu

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  README.md  build.sh  clean.sh  conanfile.py  configure.sh  default.nix  flake.nix  host_test.cpp  install_dependencies.sh  justfile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  shell.nix  tox.ini  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-env/: action.yml
.github/workflows/: build.yml  ci.yml  code-quality.yml  conan_build.yml  conan_create_package.yml  conan_setup.yml  conan_upload_package.yml  dependency-management.yml  release.yml
cmake/: CodeCoverage.cmake  EmuConfig.cmake.in  emu-config.cmake.in
docs/: Doxyfile  Makefile  ci-cd.md  conf.py  index.rst
docs/source/: changelog.rst  core.rst  dlpack.rst  error.rst  getting_started.rst  index.rst  installation.rst
docs/source/api/: cuda.rst  error.rst  misc.rst  python.rst  reference.rst
include/core/dlpack/: dlpack.h
include/core/emu/: assert.h  assert.hpp  associative_container.hpp  blas.h  blas.hpp  byte.h  capsule.hpp  charconv.hpp  concepts.hpp  config.h  config.hpp  const_string.hpp  container.h  container.hpp  cstring_view.hpp  debug.hpp  dlpack.hpp  error.hpp  expected.hpp  export_iterator.h  fun.hpp  functor.hpp  fwd.hpp  hash.hpp  info.hpp  location.h  location_policy.hpp  macro.h  macro.hpp  managed_object.hpp  math.h  math.hpp  mdalgo.hpp  mdcontainer.hpp  mdspan.h  mdspan.hpp  numeric_type.h  numeric_type.hpp  optional.h  optional.hpp  (+25 more)
include/core/emu/detail/: basic_container.hpp  basic_mdcontainer.hpp  basic_mdspan.hpp  basic_span.hpp  dlpack_types.hpp  error.h  error.hpp  mdspan_types.hpp
include/core/emu/error/: generation.hpp
include/core/emu/functional/: apply.h  invoke.h  misc.h  misc.hpp
include/core/emu/host/: accessor.hpp  container.hpp  location_policy.hpp  mdcontainer.hpp  mdspan.hpp  span.hpp
include/core/emu/misc/: location.h
include/cuda/emu/: atomic.cuh  config.cuh  cublas.h  cublas.hpp  cuda.h  cuda.hpp  cufft.hpp  cusolver.h  cusolver.hpp  device.h  device.hpp  device_span.h  fiber.hpp  funu.cuh  iterator_export.cuh  iterator_function.cuh  macro.cuh  memory.cuh  tensor.hpp  thrust.cuh  utility.cuh
include/cuda/emu/cublas/: error.h  error.hpp  handle.h  handle.hpp  type.h  type.hpp
include/cuda/emu/cuda/: allocator.hpp  container.h  container.hpp  device.hpp  error.hpp  event.hpp  graph.hpp  location.h  mdspan.h  mdspan.hpp  memory.hpp  pointer.hpp  span.h  span.hpp  stream.hpp
include/cuda/emu/cufft/: error.h  error.hpp  handle.h  handle.hpp  type.hpp  utility.hpp
include/cuda/emu/cusolver/: error.h  error.hpp  handle.h  handle.hpp
include/emu/: fun.h
include/linealg/emu/: blas.hpp
include/python/emu/: pybind11.h  pybind11.hpp
include/python/emu/bind/: map.hpp
nix/mdspan/: package.nix
ports/emu/: portfile.cmake  usage  vcpkg.json
python/: CMakeLists.txt  conanfile.py  conanfile.txt.in  layout_gcc
python/emu/: __init__.py  command.py  emu.py  functional.py  magic.py  match.py  operator.py  utils.py
python/include/emu/: pybind11.h
python/include/emu/cast/: common.h  common.hpp  container.hpp  cstring_view.hpp  mdspan.h  mdspan.hpp  span.h
python/include/emu/pybind11/: numpy.h
python/include/emu/wrap/cast/: span.h
python/src/: emu_wrap.cpp
python/test/: CMakeLists.txt  test_emu.py
python/test/src/: container_test.cpp  pybind11_test.cpp  span_test.cpp
scripts/: validate-ci.sh
src/core/: dlpack.cpp  error.cpp  fun.cpp  numeric_type.cpp  pointer.cpp  type_name.cpp
src/cuda/: cublas.cpp  cufft.cpp  cusolver.cpp
src/cuda/cublas/: error.cpp  handle.cpp
src/cuda/cuda/: error.cpp  pointer.cpp
src/cuda/cufft/: error.cpp  handle.cpp
src/cuda/cusolver/: error.cpp  handle.cpp
src/cuda/thrust/: execution_policy.cu
src/linealg/: cublas.cpp
src/linealg/cublas/: context.cpp  error.cpp
src/python/cast/: common.cpp
srcu/: funu.cu
test/: CMakeLists.txt
test/include/: utility_test.h  utility_test.hpp  view_utility_test.hpp
test/include/test_utility/: cuda_view.hpp  spy.hpp  view.hpp
test/include/test_utility/python/: accessor_test_helper.hpp  capsule_test.hpp  container_test.hpp  core.hpp  layout_test_helper.hpp  view_test.hpp
test/include/test_utility/view/: capsule_test.hpp  core.hpp  mdview_test.hpp  view_test.hpp
test/src/: test.cpp
test/src/core/: byte_test.cpp  capsule_test.cpp  cblas_test.cpp  concepts_test.cpp  container_test.cpp  cstring_view_test.cpp  dlpack_test.cpp  expected_test.cpp  functor_test.cpp  managed_object_test.cpp  math_test.cpp  mdalgo_test.cpp  mdcontainer_test.cpp  mdspan_test.cpp  optional_test.cpp  ostream_test.cpp  pointer_test.cpp  range_test.cpp  scoped_test.cpp  span_create_test.cpp  span_test.cpp  string_test.cpp  tensor_traits_test.cpp  test.cpp
test/src/core/detail/: dlpack_types_test.cpp
test/src/core/host/: container_test.cpp
test/src/cuda/: device_mdspan_test.cu  device_span_test.cu  iterator_function_test.cu  math_test.cu  mdcontainer_test.cpp  memory_test.cpp  pointer_test.cpp  test.cu
test/src/cuda/cuda/: event_test.cpp  memory_test.cpp  stream_test.cpp
test/src/cuda/host/: container_test.cpp  mdcontainer_test.cpp
test/src/cuda/iterator/: coordinate_test.cu  function_test.cu
test/src/cuda/managed/: container_test.cpp  mdcontainer_test.cpp
test/src/python/: container_test.cpp  cstring_view_test.cpp  cuda_span_test.cpp  gil.cpp  main.cpp  mdcontainer_test.cpp  mdspan_test.cpp  pybind11_test.cpp  span_test.cpp
test/src/python/pybind11/: format_test.cpp
test/src/python/pybind11/cast/: container_test.cpp  cstring_view_test.cpp  cuda_device_mdspan_test.cpp  cuda_device_span_test.cpp  mdcontainer_test.cpp  mdspan_test.cpp  span_test.cpp
test/src/python/pybind11/cast/cuda/: event_test.cpp  stream_test.cpp
test/srcu/: test.cu
test_package/: CMakeLists.txt  test_package.cpp
tools/: conanfile.py  configure.sh  configure_conan.sh  cuda_arch.py  flags.txt.in  layout_gcc
(+61 files in other folders)
