[metadata]
name = emu
description = Some toolbox
author = Julien Bernard
license = MIT
# license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    # Programming Language :: Python :: 3.10

[options]
packages = emu
package_dir = =python
python_requires = >=3.7
install_requires =
    importlib
    funcy
    boltons
    pampy

zip_safe = no

[build_sphinx]
project = 'emu'
version = 0.2.0
release = 0.2.0
source-dir = docs

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    importlib

[options.package_data]
emu = py.typed

[flake8]
max-line-length = 160
ignore = E221, E203, E271, E241
